projetos/oke/nexus-msg/nexus-msg-webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-msg-webapp-deployment
  labels:
    app: nexus-msg-webapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: nexus-msg-webapp-container
        image: ghcr.io/synapsehealthtech/nexus-msg-webapp:v0.1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "25m"
            memory: "64Mi"
          limits:
            cpu: "150m"
            memory: "128Mi"
