projetos/oke/nexus-msg/nexus-msg-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-msg-webapp-route
  namespace: nexus-msg-webapp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "msg.tech.nexusplatform.com.br"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "132.226.245.136"
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "msg.tech.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: X-Frame-Options
          value: DENY
        - name: X-Content-Type-Options
          value: nosniff
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"
    backendRefs:
    - name: nexus-msg-webapp-service
      port: 80
